--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "node ./server.js",
+    "dev": "node ./server.js",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "devDependencies": {},
   "dependencies": {
+    "knex": "<0.20.0",
+    "mime-types": "^2.1.27",
+    "mysql": "latest",
     "strapi": "3.4.4",
     "strapi-admin": "3.4.4",
-    "strapi-utils": "3.4.4",
-    "strapi-plugin-content-type-builder": "3.4.4",
-    "strapi-plugin-content-manager": "3.4.4",
-    "strapi-plugin-users-permissions": "3.4.4",
-    "strapi-plugin-email": "3.4.4",
-    "strapi-plugin-upload": "3.4.4",
     "strapi-connector-bookshelf": "3.4.4",
-    "knex": "<0.20.0",
-    "mysql": "latest",
-    "mime-types": "^2.1.27",
-    "strapi-plugin-graphql": "3.2.5"
+    "strapi-plugin-content-manager": "3.4.4",
+    "strapi-plugin-content-type-builder": "3.4.4",
+    "strapi-plugin-documentation": "^3.4.4",
+    "strapi-plugin-email": "3.4.4",
+    "strapi-plugin-graphql": "3.2.5",
+    "strapi-plugin-upload": "3.4.4",
+    "strapi-plugin-users-permissions": "3.4.4",
+    "strapi-provider-email-console": "0.0.1",
+    "strapi-provider-email-nodemailer": "^3.4.4",
+    "strapi-utils": "3.4.4"
   },
   "author": {
     "name": "A Strapi developer"
