check if a user has a premium subscription to gate premium content

--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -59,6 +59,14 @@
     "author": {
       "model": "writer",
       "via": "articles"
+    },
+    "premium": {
+      "type": "boolean",
+      "default": false,
+      "required": true
+    },
+    "teaserText": {
+      "type": "richtext"
     }
   }
 }
