--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "dev:admin-panel": "npm run dev -- --watch-admin"
   },
   "devDependencies": {},
   "dependencies": {
