--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "strapi-plugin-users-permissions": "3.4.4",
     "strapi-provider-email-console": "0.0.1",
     "strapi-provider-email-nodemailer": "^3.4.4",
-    "strapi-provider-upload-aws-s3": "^3.4.5",
+    "strapi-provider-upload-s3": "file:providers/strapi-provider-upload-s3",
     "strapi-utils": "3.4.4"
   },
   "author": {
