--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.21.1",
     "knex": "<0.20.0",
     "mime-types": "^2.1.27",
     "mysql": "latest",
