--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {},
   "dependencies": {
     "axios": "^0.21.1",
+    "discord.js": "^12.5.1",
     "knex": "<0.20.0",
+    "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
     "mysql": "latest",
     "strapi": "3.4.4",
