add subscribe to newsletter field and add user to subscribed list if they selected that option on signup

--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -15,7 +15,7 @@
       "minLength": 3,
       "unique": true,
       "configurable": false,
-      "required": true
+      "required": false
     },
     "email": {
       "type": "email",
@@ -47,6 +47,11 @@
       "type": "boolean",
       "default": false,
       "configurable": false
+    },
+    "subscribedToNewsletter": {
+      "type": "boolean",
+      "configurable": false,
+      "required": true
     },
     "blocked": {
       "type": "boolean",
