add framework for page customization in CMS

--- a/api/homepage/models/homepage.settings.json
+++ b/api/homepage/models/homepage.settings.json
@@ -2,11 +2,13 @@
   "kind": "singleType",
   "collectionName": "homepages",
   "info": {
-    "name": "Homepage"
+    "name": "Homepage",
+    "description": ""
   },
   "options": {
     "increments": true,
-    "timestamps": true
+    "timestamps": true,
+    "draftAndPublish": false
   },
   "attributes": {
     "seo": {
@@ -19,6 +21,11 @@
       "repeatable": false,
       "component": "sections.hero",
       "required": true
+    },
+    "homepagePromo": {
+      "type": "component",
+      "repeatable": false,
+      "component": "homepage.homepage-promotion"
     }
   }
 }
