add Sector Strategy to product types

--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -24,7 +24,8 @@
         "Signal",
         "Trend",
         "Template",
-        "AIConfiguration"
+        "AIConfiguration",
+        "Sector_Strategy"
       ]
     },
     "features": {
