--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
     "mysql": "latest",
+    "rss-parser": "^3.12.0",
     "strapi": "3.4.4",
     "strapi-admin": "3.4.4",
     "strapi-connector-bookshelf": "3.4.4",
