--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mime-types": "^2.1.27",
     "mysql": "latest",
     "rss-parser": "^3.12.0",
+    "sharp": "^0.29.3",
     "strapi": "3.4.4",
     "strapi-admin": "3.4.4",
     "strapi-connector-bookshelf": "3.4.4",
