--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "strapi-plugin-email": "3.4.4",
     "strapi-plugin-graphql": "3.2.5",
     "strapi-plugin-oembed": "^0.4.0",
+    "strapi-plugin-sitemap": "^1.2.5",
     "strapi-plugin-upload": "3.4.4",
     "strapi-plugin-users-permissions": "3.4.4",
     "strapi-provider-email-console": "0.0.1",
