add title and markdown section

--- a/api/pages/models/pages.settings.json
+++ b/api/pages/models/pages.settings.json
@@ -19,7 +19,8 @@
     "pageContent": {
       "type": "dynamiczone",
       "components": [
-        "sections.content"
+        "sections.content",
+        "sections.title-and-markdown"
       ]
     }
   }
