--- a/api/service-categories/models/service-categories.settings.json
+++ b/api/service-categories/models/service-categories.settings.json
@@ -14,16 +14,11 @@
     "name": {
       "type": "string"
     },
-    "image": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false
+    "description": {
+      "type": "text"
+    },
+    "order": {
+      "type": "integer"
     }
   }
 }
