--- a/api/bios/models/bios.settings.json
+++ b/api/bios/models/bios.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "bios",
   "info": {
-    "name": "bios"
+    "name": "bios",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -32,6 +33,11 @@
     },
     "location": {
       "type": "string"
+    },
+    "BioSocials": {
+      "type": "component",
+      "repeatable": true,
+      "component": "single.bio-socials"
     }
   }
 }
