--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "template": "https://github.com/strapi/strapi-template-blog"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=10.16.0 <=14.x.x",
+    "npm": ">=6.0.0"
   },
   "license": "MIT"
 }
